# sd-post-search-backend-mvp

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/post_search/: config.py  database.py  main.py
src/post_search/models/: post.py  user.py
src/post_search/routers/: health.py  posts.py  search.py  users.py
src/post_search/schemas/: common.py  post.py  search.py  user.py
src/post_search/services/: post_service.py  search_service.py  user_service.py
tests/: conftest.py  test_health.py  test_post_service.py  test_search_service.py  test_user_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_keyword_search.py  test_fr3_filtered_search.py  test_fr4_realtime_indexing.py  test_fr5_pagination.py  test_fr6_highlighting.py  test_healthz.py
