[project]
name = "post-search"
version = "0.1.0"
description = "Post Search MVP — Full-text search over posts with PostgreSQL tsvector/GIN FTS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "verify/acceptance"]
