[project]
name = "post-search"
version = "0.1.0"
description = "Post Search MVP — Full-text search over posts with PostgreSQL tsvector/GIN FTS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests", "verify/acceptance"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "B", "SIM", "ARG", "RUF"]
# B008: FastAPI Depends() uses function call in default args — intentional pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "E501"]
"verify/**" = ["ARG001", "ARG002", "E501"]
"src/post_search/main.py" = ["ARG001"]
"src/post_search/services/*" = ["N818", "E501"]
"src/post_search/routers/*" = ["B904", "E501"]
"src/post_search/config.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
